; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_prot.c_getpgid.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_prot.c_getpgid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.getpgid_args = type { i64 }

@ESRCH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getpgid(%struct.TYPE_5__* %0, %struct.getpgid_args* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.getpgid_args*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_5__*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store %struct.getpgid_args* %1, %struct.getpgid_args** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 0, i32* %9, align 4
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  store %struct.TYPE_5__* %10, %struct.TYPE_5__** %8, align 8
  %11 = load %struct.getpgid_args*, %struct.getpgid_args** %6, align 8
  %12 = getelementptr inbounds %struct.getpgid_args, %struct.getpgid_args* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  br label %25

16:                                               ; preds = %3
  %17 = load %struct.getpgid_args*, %struct.getpgid_args** %6, align 8
  %18 = getelementptr inbounds %struct.getpgid_args, %struct.getpgid_args* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = call %struct.TYPE_5__* @proc_find(i64 %19)
  store %struct.TYPE_5__* %20, %struct.TYPE_5__** %8, align 8
  %21 = icmp eq %struct.TYPE_5__* %20, null
  br i1 %21, label %22, label %24

22:                                               ; preds = %16
  %23 = load i32, i32* @ESRCH, align 4
  store i32 %23, i32* %4, align 4
  br label %36

24:                                               ; preds = %16
  store i32 1, i32* %9, align 4
  br label %25

25:                                               ; preds = %24, %15
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32*, i32** %7, align 8
  store i32 %28, i32* %29, align 4
  %30 = load i32, i32* %9, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %25
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %34 = call i32 @proc_rele(%struct.TYPE_5__* %33)
  br label %35

35:                                               ; preds = %32, %25
  store i32 0, i32* %4, align 4
  br label %36

36:                                               ; preds = %35, %22
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local %struct.TYPE_5__* @proc_find(i64) #1

declare dso_local i32 @proc_rele(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
